--- a/style.css
+++ b/style.css
@@ -14,3 +14,16 @@ body {
     min-height: 100vh;
     background: radial-gradient(#444,#222);
 }
+
+.card {
+    position: relative;
+    width: 200px;
+    height: 200px
+}
+
+.card .rating {
+    position: relative;
+    width: 100%;
+    height: 100;
+
+}
