--- a/style.css
+++ b/style.css
@@ -24,6 +24,15 @@ body {
 .card .rating {
     position: relative;
     width: 100%;
-    height: 100;
+    height: 100%;
 
+}
+
+.card .rating .block {
+    position: absolute;
+    width: 2px;
+    height: 15px;
+    background: #000;
+    left: 50%;
+    transform-origin: 50% 100px;
 }
