--- a/style.css
+++ b/style.css
@@ -35,4 +35,16 @@ body {
     background: #000;
     left: 50%;
     transform-origin: 50% 100px;
+    /* transform: rotate(25deg); */
+}
+
+.card .rating h2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 1.2em;
+    font-weight: 500;
+    text-align: center;
 }
