--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
-
+    background: #333;
 }
 
 .card .rating .block {
@@ -47,4 +47,15 @@ body {
     font-size: 1.2em;
     font-weight: 500;
     text-align: center;
+    line-height: 1.5em;
+}
+
+.card .rating h2 span {
+    font-size: 2.5em;
+    font-weight: 700;
+}
+
+.card .rating h2 sup {
+    font-size: 1.5em;
+    font-weight: 300;
 }
