--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
-    background: #333;
+    /* background: #f00; */
 }
 
 .card .rating .block {
@@ -35,7 +35,15 @@ body {
     background: #000;
     left: 50%;
     transform-origin: 50% 100px;
+    opacity: 0;
     /* transform: rotate(25deg); */
+    animation: animate 0.1s linear forwards;
+}
+
+@keyframes animate {
+    to {
+      opacity: 1;
+    }
 }
 
 .card .rating h2 {
